Prevents scrolling of the page while menu is visible and doesn't lose the scrolling position

--- a/packages/docs/src/styles/components/_Docs.scss
+++ b/packages/docs/src/styles/components/_Docs.scss
@@ -1,8 +1,15 @@
 .docs--locked {
-  position: fixed;
-  top: 0;
+  // This keeps the page from going back to the top until the menu has
+  //   finished its animation and is covering the rest of the page.
+  animation: $animation-speed-2 $animation-speed-2 forwards lock;
   left: 0;
+  top: 0;
   width: 100%;
+}
+
+@keyframes lock {
+  from { position: static; }
+  to   { position: fixed; }
 }
 
 .docs__toggle {
